# Package ######################################################################

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grid-path-planning"
description = "Path planning tools for grid-based environments."
readme = "README.md"
requires-python = ">= 3.8"
authors = [
    { name = "Troi Williams", email = "willkode@outlook.com" },
    { name = "Kasra Torshizi", email = "ktorsh@umd.edu" },
    { name = "Chak Lam Shek", email = "cshek1@umd.edu" }
]
license = { text = "Apache License" }
keywords = ["Environment, Agent, RL, Gymnasium, Path, Planning, Planner"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
dependencies = [
    "numpy>=1.20.0",
    "black>=24.8.0",
    "minigrid",
    
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/troiwill/grid-path-planning"
Repository = "https://github.com/troiwill/grid-path-planning"
Documentation = "https://github.com/troiwill/grid-path-planning"
"Bug Report" = "https://github.com/troiwill/grid-path-planning/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "grid_path_planning.__version__"}

[tool.setuptools.packages.find]
include = ["grid_path_planning*"]

# Linters and Test tools #######################################################

[tool.isort]
atomic = true
profile = "black"
append_only = true
src_paths = ["grid_path_planning", "tests"]
add_imports = [ "from __future__ import annotations" ]

[tool.pyright]
include = [
    "grid_path_planning/**",
]

exclude = [
    "**/node_modules",
    "**/__pycache__",
]

strict = []

typeCheckingMode = "basic"
pythonVersion = "3.8"
typeshedPath = "typeshed"
enableTypeIgnoreComments = true

# This is required as the CI pre-commit does not download the module (i.e. numpy)
#   Therefore, we have to ignore missing imports
reportMissingImports = "none"

reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportPrivateUsage = "warning"
reportUntypedFunctionDecorator = "none"
reportMissingTypeStubs = false
reportUnboundVariable = "warning"
reportGeneralTypeIssues ="none"
reportPrivateImportUsage = "none"

[tool.pytest.ini_options]
filterwarnings = ['ignore:.*step API.*:DeprecationWarning'] # TODO: to be removed when old step API is removed
